@@ -6,7 +6,7 @@
 // Description: TheNtupleMaker helper class for GenEventInfoProduct
 // Created:     Wed Feb 16 01:43:26 2011
 // Author:      Harrison B. Prosper      
-//$Revision: 1.1 $
+//$Revision: 1.1.1.1 $
 //-----------------------------------------------------------------------------
 #include <algorithm>
 #include <iostream>
@@ -54,6 +54,7 @@ public:
 private:
   // -- internals
   std::string pdfsetname_;
+  int nset_;
   int npdfset_;
   std::vector<double> pdf1_;
   std::vector<double> pdf2_;
